--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,34 @@
   font-family:  'poppins ', sans-serif;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
+.topo-btn{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin: 20px;
+  background-color:rgb(57, 45, 131) ;
+  border: none;
+  padding: 5px 0px;
+  border-radius: 25%;
+  text-align: center;
+  
+}
+
+.topo-btn img{
+  filter: invert(100%);
+  height: 25px;
+  width: auto;
+
+  
+  
+}
+
+
+
 .limitar-secao{
   max-width: 1024px;
   margin: 0 auto;
